force-app/main/default/objects/Account/fields/Active_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Active_Contacts__c</fullName>
    <label>Active_Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>