force-app/main/default/objects/Account/fields/Data_Sent__c.field-meta.xml
<CustomField>
    <fullName>Data_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data_Sent</label>
    <type>Checkbox</type>
</CustomField>