force-app/main/default/objects/Account/fields/field_A__c.field-meta.xml
<CustomField>
    <fullName>field_A__c</fullName>
    <label>field_A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>