force-app/main/default/objects/Account/fields/field_B__c.field-meta.xml
<CustomField>
    <fullName>field_B__c</fullName>
    <label>field_B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>