force-app/main/default/objects/Account/fields/field_C__c.field-meta.xml
<CustomField>
    <fullName>field_C__c</fullName>
    <label>field_C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>