force-app/main/default/objects/Account/fields/Inactive_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Contacts__c</fullName>
    <label>Inactive_Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>