force-app/main/default/objects/Account/fields/Update_Child__c.field-meta.xml
<CustomField>
    <fullName>Update_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update_Child</label>
    <type>Checkbox</type>
</CustomField>